# repolyze-ai

./: .env.example  .gitignore  CLAUDE.md  README.md  deploy.sh  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
agents/agent_safety/: detector.py  static_analyzer.py
agents/ai_review/: agent.py
agents/dependency_audit/: agent.py  tools.py
agents/license_compliance/: agent.py
agents/mcp_auditor/: agent.py  analyzer.py
agents/orchestrator/: agent.py
agents/secret_detection/: agent.py  tools.py
agents/static_analysis/: agent.py  (+1 more)
autoresearch/: evaluate.py  program.md  scan_rules.py
backend/: Dockerfile  demo.py  pyproject.toml
backend/app/: config.py  demo_store.py  main.py
backend/app/api/: a2a.py  auth.py  demo_router.py  health.py  reports.py  router.py  scans.py
backend/app/auth/: supabase_auth.py
backend/app/db/: agent_finding_repo.py  client.py  finding_repo.py  postgres.py  report_repo.py  scan_repo.py
backend/app/models/: common.py  finding.py  report.py  scan.py
backend/app/services/: ai_reviewer.py  dependency_scanner.py  github_service.py  pdf_generator.py  real_scan_service.py  redteam_engine.py  scan_service.py  secret_scanner.py
backend/app/services/adk_agents/: __init__.py  critic.py  orchestrator.py  pipeline.py  remediator.py  researcher.py  tools.py
backend/report/: generator.py
backend/tests/: conftest.py  test_db_layer.py  test_demo_api.py  test_scan_service.py
backend/workers/: celery_app.py  scan_tasks.py
docs/: PRD.md  STUDY_GUIDE.md
frontend/: package-lock.json  package.json
(+33 files in other folders)
